[package]
name = "goonie_buddy"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
# 3D rendering
three-d = { version = "0.16.3", features = [ "headless" ] }
three-d-asset = { version = "0.6.0", features = [ "gltf", "obj", "png" ] }

# GUI
egui = { git = "https://github.com/emilk/egui" }
eframe = { git = "https://github.com/emilk/egui" }  # https://github.com/emilk/egui/pull/3646

# Error management
anyhow = "1.0.75"